# DA264A_Axis_project

./: CMakeLists.txt  platformio.ini  testresultat.txt
Matlab_plottR/: PlotValuesFromArduino.m
src/: main.cpp  networkCommunication.cpp  networkCommunication.h  pictureControl.cpp  pictureControl.h  ptzcontrol.cpp  ptzcontrol.h  readAccelerometer.cpp  readAccelerometer.h  readButton.cpp  readButton.h
src/testing/: testADXL345.cpp  testADXL345.h  testCameraCommands.cpp  testCameraCommands.h  testHttp.cpp  testHttp.h  testWifi.cpp  testWifi.h  test_main.cpp  test_main.h  unittest.cpp  unittest.h
